# CSLessons

./: .gitignore  README.md
Arrays/: CMakeLists.txt
Arrays/Arrays/: Another.cpp  Another.h  Arrays.cpp  Arrays.h  CMakeLists.txt
ArraysLessonsTask02.11.20/ArraysLessonsTask02.11.20/: ArraysLessonsTask02.11.20.cpp  ArraysLessonsTask02.11.20.h  CMakeLists.txt
Averages/: CMakeLists.txt
Averages/Averages/: Averages.cpp  Averages.h  CMakeLists.txt
BubbleSort/BubbleSort/: BubbleSort.cpp  BubbleSort.h  CMakeLists.txt
BucketSort Function/: CMakeLists.txt
BucketSort Function/BucketSort Function/: BucketSort Function.cpp  BucketSort Function.h  CMakeLists.txt
FirstProgram/: CMakeLists.txt
FirstProgram/FirstProgram/: CMakeLists.txt  FirstProgram.cpp  FirstProgram.h
FunctionsAndPrimitives/: CMakeLists.txt
FunctionsAndPrimitives/FunctionsAndPrimitives/: CMakeLists.txt  FunctionsAndPrimitives.cpp  FunctionsAndPrimitives.h
HomeWork 24.11.20/: CMakeLists.txt
HomeWork 24.11.20/HomeWork 24.11.20/: CMakeLists.txt  HomeWork 24.11.20.cpp  HomeWork 24.11.20.h
Lesson 6 task 05.11.20/: CMakeLists.txt
Lesson 6 task 05.11.20/Lesson 6 task 05.11.20/: CMakeLists.txt  Lesson 6 task 05.11.20.cpp  Lesson 6 task 05.11.20.h
Noam First/NoamFirst/: CMakeLists.txt
Noam First/NoamFirst/NoamFirst/: CMakeLists.txt  NoamFirst.cpp  NoamFirst.h
NumberCounter/: CMakeLists.txt
NumberCounter/NumberCounter/: CMakeLists.txt  NumberCounter.cpp  NumberCounter.h
Primes/: CMakeLists.txt
Primes/Primes/: CMakeLists.txt  Primes.cpp  Primes.h
Second/Second/: CMakeLists.txt
Second/Second/Second/: CMakeLists.txt  Second.cpp  Second.h
SelectionSort/: CMakeLists.txt
SelectionSort/SelectionSort/: CMakeLists.txt  SelectionSort.cpp  SelectionSort.h
SelectionSort/SelectionSortNoam/SelectionSortNoam/: CMakeLists.txt
SelectionSort/SelectionSortNoam/SelectionSortNoam/SelectionSortNoam/: CMakeLists.txt  SelectionSortNoam.cpp  SelectionSortNoam.h
StringCounter/: CMakeLists.txt
StringCounter/StringCounter/: CMakeLists.txt  Comparition  StringCounter.cpp  StringCounter.h  com
Strings/: CMakeSettings.json
Strings/Strings/: Strings.cpp
SumNumbers/: CMakeLists.txt
SumNumbers/SumNumbers/: CMakeLists.txt  SumNumbers.cpp  SumNumbers.h
SwapVariables/: CMakeLists.txt
SwapVariables/SwapVariables/: CMakeLists.txt  SwapVariables.cpp  SwapVariables.h
Task 03.11.20/: CMakeLists.txt
Task 03.11.20/Task 03.11.20/: CMakeLists.txt  Task 03.11.20.cpp  Task 03.11.20.h
Task 11.11.20/: CMakeLists.txt  CMakeSettings.json
Task 11.11.20/Task 11.11.20/: CMakeLists.txt  Task 11.11.20.cpp  Task 11.11.20.h
Task 18.11.2020/: CMakeLists.txt
Task 18.11.2020/Task 18.11.2020/: CMakeLists.txt  Task 18.11.2020.cpp  Task 18.11.2020.h
Tehnutiada/: CMakeLists.txt  CMakeSettings.json
Tehnutiada/Tehnutiada/: CMakeLists.txt  Helpers.cpp  Helpers.h  Kaki.cpp  Tehnutiada.cpp  Tehnutiada.h
Test/Test/: Test.cpp
YourSelectionSort/: CMakeLists.txt
YourSelectionSort/YourSelectionSort/: CMakeLists.txt  YourSelectionSort.cpp  YourSelectionSort.h
dynamic arr 16.11.20/: CMakeLists.txt
dynamic arr 16.11.20/dynamic arr 16.11.20/: CMakeLists.txt  dynamic arr 16.11.20.cpp  dynamic arr 16.11.20.h
homework 27.11.20/homework 27.11.20/: CMakeLists.txt  homework 27.11.20.cpp  homework 27.11.20.h
