# CMakeList.txt : CMake project for Arrays, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Arrays "Arrays.cpp" "Arrays.h" "Another.cpp" "Another.h")

# TODO: Add tests and install targets if needed.
