# CMakeList.txt : CMake project for HomeWork 24.11.20, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "HomeWork 24.11.20.cpp" "HomeWork 24.11.20.h")

# TODO: Add tests and install targets if needed.
