# CMakeList.txt : CMake project for Lesson 6 task 05.11.20, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Lesson 6 task 05.11.20.cpp" "Lesson 6 task 05.11.20.h")

# TODO: Add tests and install targets if needed.
