# CMakeList.txt : CMake project for Tehnutiada, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Tehnutiada "Tehnutiada.cpp" "Tehnutiada.h" "Helpers.cpp" "Helpers.h" "Kaki.cpp")

# TODO: Add tests and install targets if needed.
